# wrap-test-harness

./: .gitignore  Cargo.toml  README.md  VERSION  list.txt  package.json  results-template.json  results-test.json  results.json  run.sh  todo  todo.txt  tsconfig.json
.github/: CODEOWNERS  PRE_PUBLISHERS  PUBLISHERS  runner.yaml
.github/workflows/: build-and-lint.yaml  ci.yaml  generate-wrappers.yaml  release-pr.yaml  release-publish.yaml
03-subinvoke/: schema.graphql
build-example/asyncify/: client-config.ts  polywrap.test.yaml
build-t/bignumber-type/: workflow.json
build-t/large-type/: schema.graphql
build-t/map-type/: schema.graphql
build-t/numbers-type/: schema.graphql  workflow.json
cases/asyncify/: client-config.ts  polywrap.json  schema.graphql  test.ts  validator.cue
cases/bigint-type/: workflow.json
cases/bignumber-type/: validator.cue  workflow.json
cases/bytes-type/: workflow.json
cases/enum-type/: validator.cue
cases/env-type/: client-config.ts
cases/interface-invoke/: client-config.ts
cases/invalid-type/: workflow.json
cases/map-type/: polywrap.json  schema.graphql  schema.import.graphql  validator.cue
cases/no-args/: schema.graphql  (+2 more)
defaults/: Cargo.toml  go.mod  package.json  polywrap.json
defaults/as/: package.json
defaults/go/: go.mod
defaults/typescript/: package.json
deprecated-src/: generator.ts
rs-harness/: Cargo.toml
src/: constants.rs  engine.rs  engine.ts  error.rs  generator.rs  generator.ts  index.ts  input.rs  lib.rs  main.rs  manifest.rs  new_engine.rs  polywrap_cli.rs  result.rs
ts/: engine.ts
(+392 files in other folders)
